added some animations to the header section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Esta es mi pagina web de portafolio. Mi nombre es Jose Arpaia y dejame contante mi histotia y trayecto como Desarrollor Web.">
-    <title>José Arpaia</title>
+    <title>Portafolio José Arpaia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/faviconJA.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css" class="">
@@ -39,33 +39,33 @@
     <main>
         <section class="contenedor sobre-mi" id="sobre-mi">
             <h2>Un poco de mí</h2>
-            <div class="cont-sobre-mi">
-                <div class="cont-sobre-studios">
-                    <img src="" alt="Jose Arpaia" title="Jose Arpaia">
-                    <h4>1 Soy estudiante</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci
-                        explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati
-                        mollitia aperiam veniam quasi dicta. Eligendi adipisci illo ullam repellat reprehenderit
-                        voluptas beatae sequi ducimus, expedita nulla magnam quos, molestiae deserunt distinctio fugiat
-                        eos!</p>
+            <div class="container-sobre-mi">
+                <div class="cont-estudios card">
+                    <div class="card__img" style="background-image: url(img/AboutMeSection/Education.jpg);"></div>
+                    <article>
+                        <h4>1 Soy estudiante</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt sit, expedita tempore rerum culpa repellendus, nihil reprehenderit iure harum a modi, officiis soluta magnam. Facere accusamus facilis assumenda quisquam quibusdam.
+                        </p>
+                        <p><i>Autor: Jose Arpaia</i></p>
+                    </article>
                 </div>
-                <div class="cont-sobre-futbol">
-                    <img src="" alt="Prueba" title="Prueba">
-                    <h4>2 Amo el futbol</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci
-                        explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati
-                        mollitia aperiam veniam quasi dicta. Eligendi adipisci illo ullam repellat reprehenderit
-                        voluptas beatae sequi ducimus, expedita nulla magnam quos, molestiae deserunt distinctio fugiat
-                        eos!</p>
+                <div class="cont-sobre-futbol card">
+                    <div class="card__img" style="background-image: url(img/AboutMeSection/Sports.jpg);"></div>
+                    <article>
+                        <h4>2 Amo el futbol</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quisquam iure culpa impedit quidem reprehenderit at voluptas aperiam voluptatum nemo excepturi eveniet cumque error libero quod, atque dolorem ipsa repellendus!
+                        </p>
+                        <p><i>Autor: Jose Arpaia</i></p>
+                    </article>
                 </div>
-                <div class="cont-sobre-hobbies">
-                    <img src="" alt="Prueba" title="Prueba">
-                    <h4>3 Hobbies (SPOILER: SOY CINEFILO!!)</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci
-                        explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati
-                        mollitia aperiam veniam quasi dicta. Eligendi adipisci illo ullam repellat reprehenderit
-                        voluptas beatae sequi ducimus, expedita nulla magnam quos, molestiae deserunt distinctio fugiat
-                        eos!</p>
+                <div class="cont-sobre-hobbies card">
+                    <div class="card__img" style="background-image: url(img/AboutMeSection/hobbies.jpg);"></div>
+                    <article>    
+                        <h4>3 Hobbies (SPOILER: SOY CINEFILO!!)</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dolor, necessitatibus qui, neque in assumenda ducimus sed maiores aliquid at, quisquam nemo asperiores aperiam laborum placeat optio velit voluptate sapiente?
+                        </p>
+                        <p><i>Autor: Jose Arpaia</i></p>
+                    </article>
                 </div>
             </div>
         </section>
@@ -73,24 +73,32 @@
             <h2>Tecnologias Dominadas</h2>
             <div class="cont-techs">
                 <div class="card">
-                    <img src="" alt="Prueba" title="Prueba">
-                    <h3>tech 1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                    <div class="card__img" style="background-image: url(img/);"></div>
+                    <article>
+                        <h3>HTML</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                    </article>
                 </div>
                 <div class="card">
-                    <img src="" alt="Prueba" title="Prueba">
-                    <h3>tech 2</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                    <div class="card__img" style="background-image: url(img/);"></div>
+                    <article>
+                        <h3>CSS3</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                    </article>
                 </div>
                 <div class="card">
-                    <img src="" alt="Prueba" title="Prueba">
-                    <h3>tech 3</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                    <div class="card__img" style="background-image: url(img/);"></div>
+                    <article>
+                        <h3>JavaScript</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                    </article>
                 </div>
                 <div class="card">
-                    <img src="" alt="Prueba" title="Prueba">
-                    <h3>tech 4</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                    <div class="card__img" style="background-image: url(img/);"></div>
+                    <article>
+                        <h3>Git</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                    </article>
                 </div>
             </div>
         </section>
@@ -161,18 +169,18 @@
             </div>
         </section>
     </main>
-    <section class="contenedor contact" id="contacto">
+    <section class="contact" id="contacto">
          <h2>Formulario de Contacto</h2>
          <div>
-            <form class="form" action="form">
+            <form class="form" id="formId" action="form">
                 <div class="form__img">
-                    <img src="img/Contact.png" title="Imagen del formulario" alt="imagen delformulario de contacto">
+                    <img src="img/Contact.png" title="Imagen del formulario" alt="imagen delformulario de contacto" style="box-shadow: none;">
                 </div>
-                <div class="form__flex-input">
+                <div class="form__flex-input" id="formIdInput">
                     <input class="form__input" type="text" name="nombre" placeholder="Nombre">
                     <input class="form__input" type="text" name="apellido" placeholder="Apellido">
-                    <input class="form__input" type="email" name="email" placeholder="Email" required>
-                    <textarea class="form__input" name="mensaje" id="mensaje" placeholder="Escriba su mensaje aqui..." required></textarea>
+                    <input class="form__input" type="email" name="email" placeholder="Email">
+                    <textarea class="form__input" name="mensaje" id="mensaje" placeholder="Escriba su mensaje aqui..." ></textarea>
                     <input class="form__input form__button" type="submit" value="Enviar">
                 </div>
             </form> 
@@ -184,11 +192,11 @@
             <!-- <a href="#">josearpaiaquintero@gmail.com</a> -->
             <a href="https://www.facebook.com/jose.arpaia">Facebook</a>
             <a href="#">Twitter</a>
-            <a href="#">Discord Server</a>
+            <a href="#">Discord</a>
             <a href="#">Instagram</a>
             <a href="#">Github</a>
         </div>
-        <h2 class="copyright-footer">&copy; Todos los derechos reservados | Hecho por <img src="img/faviconJA- 32x32.png" alt=""><span> Jose Arpaia</span></h2>
+        <h2 class="copyright-footer">&copy; Todos los derechos reservados<br>Hecho por <img src="img/faviconJA- 32x32.png" alt=""><span> Jose Arpaia</span></h2>
     </footer>
 
     <!-- <h1 id="home">Blog de la universidad</h1>
