--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f1bcc746fb.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -42,29 +43,32 @@
             <div class="container-sobre-mi">
                 <div class="cont-estudios card">
                     <div class="card__img" style="background-image: url(img/AboutMeSection/Education.jpg);"></div>
-                    <article>
-                        <h4>1 Soy estudiante</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt sit, expedita tempore rerum culpa repellendus, nihil reprehenderit iure harum a modi, officiis soluta magnam. Facere accusamus facilis assumenda quisquam quibusdam.
+                    <article class="card__article">
+                        <h4>Universidad</h4>
+                        <p>
+                            Actualmente estoy estudiando la carrera de Ingenieria de Sistemas y Computación en la Universidad Tecnologica de Panamá, curso los ultimos años de mi carrera, aunque desde siempre me han gustado la computadoras y todo lo que referente a la tecnologia, aprendi HTML a los 17 años y desde ahi supe que tendria que aprender más del desarrolo web.
                         </p>
-                        <p><i>Autor: Jose Arpaia</i></p>
+                        <p class="card__article-author">Autor: Jose Arpaia</p>
                     </article>
                 </div>
                 <div class="cont-sobre-futbol card">
                     <div class="card__img" style="background-image: url(img/AboutMeSection/Sports.jpg);"></div>
-                    <article>
-                        <h4>2 Amo el futbol</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quisquam iure culpa impedit quidem reprehenderit at voluptas aperiam voluptatum nemo excepturi eveniet cumque error libero quod, atque dolorem ipsa repellendus!
+                    <article class="card__article">
+                        <h4>Me encantan los deportes</h4>
+                        <p>
+                            Desde muy pequeño siempre he sido muy dinamico y activo, sobre todo en el tema de los deportes. El futbol o soccer (como se le conoce en algunos paises) ha estado siempre presente en mi vida y la verdad me encanta, practicarlo. Tambien me gusta mucho el tenis y cada que tengo la oportunidad tambien lo practico pero no esta de más siempre una buena conversación sobre cualquier deporte, realmente las disfruto.
                         </p>
-                        <p><i>Autor: Jose Arpaia</i></p>
+                        <p class="card__article-author">Autor: Jose Arpaia</p>
                     </article>
                 </div>
                 <div class="cont-sobre-hobbies card">
                     <div class="card__img" style="background-image: url(img/AboutMeSection/hobbies.jpg);"></div>
-                    <article>    
-                        <h4>3 Hobbies (SPOILER: SOY CINEFILO!!)</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dolor, necessitatibus qui, neque in assumenda ducimus sed maiores aliquid at, quisquam nemo asperiores aperiam laborum placeat optio velit voluptate sapiente?
+                    <article class="card__article">    
+                        <h4>Hobbies (SPOILER: SOY CINEFILO!!)</h4>
+                        <p>
+                            Ademas de los deportes, me gusta distraerme con el mundoa audiovisual, cine, series, cortmetrajes (obvio me encanta el UCM). Tambien de vez en cuando y de cuando en vez, hago caso a los videos recetas y preparar algo rico en casa para toda la familia.
                         </p>
-                        <p><i>Autor: Jose Arpaia</i></p>
+                        <p class="card__article-author">Autor: Jose Arpaia</p>
                     </article>
                 </div>
             </div>
@@ -73,31 +77,47 @@
             <h2>Tecnologias Dominadas</h2>
             <div class="cont-techs">
                 <div class="card">
-                    <div class="card__img" style="background-image: url(img/);"></div>
-                    <article>
-                        <h3>HTML</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                    <div class="card__img" style="width: 100%; :hover{color:white;} ">
+                        <img src="img/KnownTechs/html5-brands.svg" alt="html" title="html logo">
+                    </div>
+                    <article class="card__article">
+                        <h4>HTML</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.
+                        </p>
                     </article>
                 </div>
                 <div class="card">
-                    <div class="card__img" style="background-image: url(img/);"></div>
-                    <article>
-                        <h3>CSS3</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                    <div class="card__img" style="width: 100%;">
+                        <img src="img/KnownTechs/css3-alt-brands.svg" alt="CSS" title="CSS logo">
+                    </div>
+                    <article class="card__article">
+                        <h4>CSS3</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.
+                        </p>
                     </article>
                 </div>
                 <div class="card">
-                    <div class="card__img" style="background-image: url(img/);"></div>
-                    <article>
-                        <h3>JavaScript</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                    <div class="card__i" style="width: 100%;">
+                        <img src="img/KnownTechs/js-brands.svg" alt="JavaScript" title="JavaScript logo">
+                    </div>
+                    <article class="card__article">
+                        <h4>JavaScript</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.
+                        </p>
                     </article>
                 </div>
                 <div class="card">
-                    <div class="card__img" style="background-image: url(img/);"></div>
-                    <article>
-                        <h3>Git</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                    <div class="card__img" style="width: 100%;">
+                        <img src="img/KnownTechs/git-alt-brands.svg" alt="Git logo" title="Git logo">
+                    </div>
+                    <article class="card__article">
+                        <h4>Git</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.
+                        </p>
                     </article>
                 </div>
             </div>
@@ -108,30 +128,38 @@
                 <div class="proy-card">
                     <img src="" alt="Prueba" title="Prueba">
                     <h3>Proyecto 1</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
-                        dolorum ea laborum praesentium non quod.</p>
+                        dolorum ea laborum praesentium non quod.
+                    </p>
                 </div>
                 <div class="proy-card">
                     <img src="" alt="Prueba" title="Prueba">
                     <h3>Proyecto 2</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
-                        dolorum ea laborum praesentium non quod.</p>
+                        dolorum ea laborum praesentium non quod.
+                    </p>
                 </div>
                 <div class="proy-card">
                     <img src="" alt="Prueba" title="Prueba">
                     <h3>Proyecto 3</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
-                        dolorum ea laborum praesentium non quod.</p>
+                        dolorum ea laborum praesentium non quod.
+                    </p>
                 </div>
                 <div class="proy-card">
                     <img src="" alt="Prueba" title="Prueba">
                     <h3>Proyecto 4</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
-                        dolorum ea laborum praesentium non quod.</p>
+                        dolorum ea laborum praesentium non quod.
+                    </p>
                 </div>
             </div>
         </section>
@@ -141,30 +169,38 @@
                 <div class="art-card">
                     <img src="" alt="Prueba" title="Prueba">
                     <h3>Articulo 1</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
-                        dolorum ea laborum praesentium non quod.</p>
+                        dolorum ea laborum praesentium non quod.
+                    </p>
                 </div>
                 <div class="art-card">
                     <img src="" alt="Prueba" title="Prueba">
                     <h3>Articulo 2</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
-                        dolorum ea laborum praesentium non quod.</p>
+                        dolorum ea laborum praesentium non quod.
+                    </p>
                 </div>
                 <div class="art-card">
                     <img src="" alt="Prueba" title="Prueba">
                     <h3>Articulo 3</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
-                        dolorum ea laborum praesentium non quod.</p>
+                        dolorum ea laborum praesentium non quod.
+                    </p>
                 </div>
                 <div class="art-card">
                     <img src="" alt="Prueba" title="Prueba">
                     <h3>Articulo 4</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
-                        dolorum ea laborum praesentium non quod.</p>
+                        dolorum ea laborum praesentium non quod.
+                    </p>
                 </div>
             </div>
         </section>
@@ -190,11 +226,11 @@
         <h2 class="footer__h2">Redes Sociales</h2>
         <div class="footer-cont">
             <!-- <a href="#">josearpaiaquintero@gmail.com</a> -->
-            <a href="https://www.facebook.com/jose.arpaia">Facebook</a>
-            <a href="#">Twitter</a>
-            <a href="#">Discord</a>
-            <a href="#">Instagram</a>
-            <a href="#">Github</a>
+            <a href="https://www.facebook.com/jose.arpaia" target="_BLANK"><i class="fab fa-facebook"></i></a>
+            <a href="#" target="_BLANK"><i class="fab fa-twitter"></i></a>
+            <a href="#" target="_BLANK"><i class="fab fa-discord"></i></a>
+            <a href="#" target="_BLANK"><i class="fab fa-instagram"></i></a>
+            <a href="#" target="_BLANK"><i class="fab fa-github"></i></a>
         </div>
         <h2 class="copyright-footer">&copy; Todos los derechos reservados<br>Hecho por <img src="img/faviconJA- 32x32.png" alt=""><span> Jose Arpaia</span></h2>
     </footer>
