change the background style with background-attachment property

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 </head>
 <body>
     <header>
-        <div class="header__bg" style="background-image: url(img/bg-new-york.jpg) ;">
+        <div class="header__bg">
             <nav>
                 <span>
                     <img src="img/faviconJA- 32x32.png" alt="Logo" title="Jose Arpaia">
-                    <!-- <a id="name" href="./">José Arpaia</a> -->
                 </span>
                 <a href="#sobre-mi">Sobre mi</a>
                 <a href="#proyectos">Proyectos</a>
@@ -227,12 +226,12 @@
         <div class="footer-cont">
             <!-- <a href="#">josearpaiaquintero@gmail.com</a> -->
             <a href="https://www.facebook.com/jose.arpaia" target="_BLANK"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_BLANK"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_BLANK"><i class="fab fa-discord"></i></a>
-            <a href="#" target="_BLANK"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_BLANK"><i class="fab fa-github"></i></a>
+            <a href="https://twitter.com/ArpaiaJose" target="_BLANK"><i class="fab fa-twitter"></i></a>
+            <p><i class="fab fa-discord"></i></p>
+            <a href="https://www.instagram.com/josearpaiaq/" target="_BLANK"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/JQARPAIA" target="_BLANK"><i class="fab fa-github"></i></a>
         </div>
-        <h2 class="copyright-footer">&copy; Todos los derechos reservados<br>Hecho por <img src="img/faviconJA- 32x32.png" alt=""><span> Jose Arpaia</span></h2>
+        <h2 class="copyright-footer">&copy; 2021 Todos los derechos reservados<br>Hecho con amor por <img src="img/faviconJA- 32x32.png" alt=""><span>Jose Arpaia</span></h2>
     </footer>
 
     <!-- <h1 id="home">Blog de la universidad</h1>
