--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
             <h2>Tecnologias Dominadas</h2>
             <div class="cont-techs">
                 <div class="card">
-                    <div class="card__img" style="width: 100%;">
-                        <img src="img/KnownTechs/html5-brands.svg" alt="html" title="html logo">
-                    </div>
+                    <div class="card__img" style="background-image: url(img/KnownTechs/html5-brands.svg);"></div>
                     <article class="card__article">
                         <h4>HTML</h3>
                         <p>
@@ -89,9 +87,7 @@
                     </article>
                 </div>
                 <div class="card">
-                    <div class="card__img" style="width: 100%;">
-                        <img src="img/KnownTechs/css3-alt-brands.svg" alt="CSS" title="CSS logo">
-                    </div>
+                    <div class="card__img" style="background-image: url(img/KnownTechs/css3-alt-brands.svg);"></div>
                     <article class="card__article">
                         <h4>CSS3</h3>
                         <p>
@@ -102,9 +98,7 @@
                     </article>
                 </div>
                 <div class="card">
-                    <div class="card__img" style="height: 100px;">
-                        <img src="img/KnownTechs/js-brands.svg" alt="JavaScript" title="JavaScript logo">
-                    </div>
+                    <div class="card__img" style="background-image: url(img/KnownTechs/js-brands.svg);"></div>
                     <article class="card__article">
                         <h4>JavaScript</h3>
                         <p>
@@ -115,9 +109,7 @@
                     </article>
                 </div>
                 <div class="card">
-                    <div class="card__img" style="width: 100%;">
-                        <img src="img/KnownTechs/git-alt-brands.svg" alt="Git logo" title="Git logo">
-                    </div>
+                    <div class="card__img" style="background-image: url(img/KnownTechs/git-alt-brands.svg"></div>
                     <article class="card__article">
                         <h4>Git</h3>
                         <p>
