tech section changed to knowledge section, new display in that setcion with images and new display of the card in about-me section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="img/faviconJA- 32x32.png" alt="Logo" title="Jose Arpaia">
                 </span>
                 <a href="#sobre-mi">Sobre mi</a>
-                <a href="#proyectos">Proyectos</a>
+                <a href="#techs">Conocimientos</a>
                 <a href="#articulos">Escritos</a>
                 <a href="#contacto">Contacto</a>
                 <a href="#" id="nav__btn-menu">Menu</a>
@@ -41,7 +41,7 @@
             <h2>Un poco de mí</h2>
             <div class="container-sobre-mi">
                 <div class="cont-estudios card">
-                    <div class="card__img" style="background-image: url(img/AboutMeSection/Education.jpg);"></div>
+                    <div class="card__img" style="background-image: url(img/AboutMeSection/Education.jpg);box-shadow: none;"></div>
                     <article class="card__article">
                         <h4>Universidad</h4>
                         <p>
@@ -51,7 +51,7 @@
                     </article>
                 </div>
                 <div class="cont-sobre-futbol card">
-                    <div class="card__img" style="background-image: url(img/AboutMeSection/Sports.jpg);"></div>
+                    <div class="card__img" style="background-image: url(img/AboutMeSection/Sports.jpg);box-shadow: none"></div>
                     <article class="card__article">
                         <h4>Me encantan los deportes</h4>
                         <p>
@@ -61,7 +61,7 @@
                     </article>
                 </div>
                 <div class="cont-sobre-hobbies card">
-                    <div class="card__img" style="background-image: url(img/AboutMeSection/hobbies.jpg);"></div>
+                    <div class="card__img" style="background-image: url(img/AboutMeSection/hobbies.jpg);box-shadow: none"></div>
                     <article class="card__article">    
                         <h4>Hobbies (SPOILER: SOY CINEFILO!!)</h4>
                         <p>
@@ -73,51 +73,38 @@
             </div>
         </section>
         <section class="contenedor techs">
-            <h2>Tecnologias Dominadas</h2>
-            <div class="cont-techs">
-                <div class="card">
-                    <div class="card__img" style="background-image: url(img/KnownTechs/html5-brands.svg);"></div>
-                    <article class="card__article">
-                        <h4>HTML</h3>
-                        <p>
-                            HiperText Markup Language, el lenguaje que maqueta el internet, hace varios años que conozco este lenguaje y, aunque no es un lenguaje de programacion, sabemos lo esencial que es para el internet desde sus inicios.
-                            <br><br>
-                            Dominio de esta tecnologia: 90/100.
-                        </p>
-                    </article>
-                </div>
-                <div class="card">
-                    <div class="card__img" style="background-image: url(img/KnownTechs/css3-alt-brands.svg);"></div>
-                    <article class="card__article">
-                        <h4>CSS3</h3>
-                        <p>
-                            No podemos hablar de HTML sin tomar en cuenta a CSS, que es el lenguaje que la color y embellece la web, aprendí CSS casi en simultaneo con HTML ya que van muy de la mano, sobre todo, en el inicio como desarrollador web.
-                            <br><br>
-                            Dominio de esta tecnologia: 70/100.
-                        </p>
-                    </article>
-                </div>
-                <div class="card">
-                    <div class="card__img" style="background-image: url(img/KnownTechs/js-brands.svg);"></div>
-                    <article class="card__article">
-                        <h4>JavaScript</h3>
-                        <p>
-                            JavaScript es la vida de la web, si HTML y CSS son el esqueleto, podemos decir que JS es el musculo que le da vida a la web para que podamos interactuar con ella.
-                            <br><br>
-                            Dominio de esta tecnologia: 60/100.
-                        </p>
-                    </article>
-                </div>
-                <div class="card">
-                    <div class="card__img" style="background-image: url(img/KnownTechs/git-alt-brands.svg"></div>
-                    <article class="card__article">
-                        <h4>Git</h3>
-                        <p>
-                            Este tecnologia pasó de ser un complemento para organizar, a ser una necesidad para mantener y escalar proyectos, desde los más simples hasta los más complejos utilizan Git en su dia a dia y por eso es tan importante.
-                            <br><br>
-                            Dominio de esta tecnologia: 80/100.
-                        </p>
-                    </article>
+            <h2>Conocimientos</h2>
+            <div class="conocimientos">
+                <div>
+                    <div class="conocimientos__img">
+                        <div>
+                            <img src="img/KnownTechs/html5-brands.svg" title="HTML" alt="HTML LOGO">
+                            <p>Nivel:
+                                <input type="range" disabled value="90">
+                            </p>
+                        </div>
+                        <div>
+                            <img src="img/KnownTechs/css3-alt-brands.svg" title="CSS" alt="CSS LOGO">
+                            <p>Nivel:
+                                <input type="range" disabled value="60">
+                            </p>
+                        </div>
+                        <div>
+                            <img src="img/KnownTechs/js-brands.svg" title="Java alt" title="JavaScript Logo">
+                            <p>Nivel:
+                                <input type="range" disabled value="50">
+                            </p>
+                        </div>
+                        <div>
+                            <img src="img/KnownTechs/git-alt-brands.svg" title="GIT" alt="GIT LOGO">
+                            <p>Nivel:
+                                <input type="range" disabled value="70">
+                            </p>
+                        </div>
+                    </div>
+                    <div class="conocimientos__ilustracion">
+                        <img src="img/KnownTechs/IlustracionWebDevelopment.svg" alt="conocimientos" title="Desarrollo Web">
+                    </div>
                 </div>
             </div>
         </section>
