correct some gramatic mistakes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <article class="card__article">    
                         <h4>Hobbies (SPOILER: SOY CINEFILO!!)</h4>
                         <p>
-                            Ademas de los deportes, me gusta distraerme con el mundoa audiovisual, cine, series, cortmetrajes (obvio me encanta el UCM). Tambien de vez en cuando y de cuando en vez, hago caso a los videos recetas y preparar algo rico en casa para toda la familia.
+                            Ademas de los deportes, me gusta distraerme con el mundo audiovisual, cine, series, cortometrajes y peliculas de acción y sci-fi como Marvel, por ejemplo. Tambien de vez en cuando y de cuando en vez, hago caso a los video recetas y preparo algo rico en casa para toda la familia.
                         </p>
                         <p class="card__article-author">Autor: Jose Arpaia</p>
                     </article>
