added meta data for social media

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Esta es mi pagina web de portafolio. Mi nombre es Jose Arpaia y dejame contante mi histotia y trayecto como Desarrollor Web.">
-    <title>Portafolio José Arpaia</title>
+    <meta name="description" content="Esta es mi pagina web de portafolio. Mi nombre es Jose Arpaia y dejame contarte mi histotia y trayecto como Desarrollador Web.">
+    <meta name="author" content="Jose Arpaia">
+    <meta property="og:image" content="img/fotoDePortadaDiseñoWeb.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/faviconJA.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css" class="">
@@ -12,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f1bcc746fb.js" crossorigin="anonymous"></script>
+    <title>Portafolio José Arpaia</title>
 </head>
 <body>
     <header>
