fixed responsive troubles in nav and contact section

--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
          <h2>Contacto</h2>
          <div class="animatedCubic"></div>
          <p>
-            Puedes contactarme al siguiente correo para trabajar juntos
+            Puedes contactarme a este correo
+            <a href="mailto: josarpaiaquintero@gmail.com"><b>josearpaiaquintero@gmail.com</b></a>
          </p>
-         <a href="mailto: josarpaiaquintero@gmail.com"><b>josearpaiaquintero@gmail.com</b></a>
     </section>
     <footer>
         <h2 class="footer__h2">Redes Sociales</h2>
